# eel

./: Cargo.toml
core/: Cargo.toml
core/src/: async_runtime.rs  buffer.rs  complete_buffer.rs  cursor.rs  editor.rs  error.rs  lib.rs  mark.rs  marks.rs  position.rs  region.rs  test_utils.rs  tracing.rs
core/src/region/: cursor.rs  editor_factory.rs  mark.rs  mod.rs
nvim/eel-nvim/: Cargo.toml  Makefile.toml
nvim/eel-nvim-macros/: Cargo.toml
nvim/eel-nvim-macros/src/: lib.rs
nvim/eel-nvim/src/: buffer.rs  dispatcher.rs  editor.rs  error.rs  lib.rs  test_utils.rs  tracing.rs  window.rs
nvim/eel-nvim/src/buffer/: cursor.rs  mark.rs  mod.rs
src/: async_dispatch.rs  buffer.rs  editor.rs  error.rs  lib.rs  lua.rs  tracing.rs  window.rs
