[package]
name = "eel"
version = "0.0.1"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
itertools = "0.14.0"
paste = "1.0.15"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "tracing"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
console-subscriber = { version = "0.5.0", optional = true}

[features]
default = ["cursor", "mark", "region"]
tests = []
cursor = []
mark = []
region = ["mark"]
tokio-console = ["dep:console-subscriber"]
