[package]
name = "eel-nvim"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
eel = { version = "0.0.1", path = "../../core", default-features = false }
eel-nvim-macros = { version = "0.0.1", path = "../eel-nvim-macros", optional = true }

async-trait = "0.1.89"
futures = "0.3.31"
nvim-oxi = { version = "0.6.0", features = ["libuv", "mlua", "neovim-0-11"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
derivative = "2.2.0"

[build-dependencies]
nvim-oxi = { version = "0.6.0", features = ["neovim-0-11", "test"] }

[features]
default = ["cursor", "mark", "region"]
tests = []
cursor = ["eel/cursor"]
mark = ["eel/mark"]
region = ["eel/region", "mark"]
nvim-tests = ["dep:eel-nvim-macros", "nvim-oxi/test", "eel/tests"]
tokio-console = ["eel/tokio-console"]
